# zero2prod

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  deny.toml  sqlx-data.json
.github/workflows/: general.yaml
assets/: config
configuration/: base.yaml  production.yaml
migrations/: 20230323145343_make_status_not_null_in_subscriptions.sql  20230323145832_create_subscriptions_tokens_table.sql  20230328023553_add_salt_to_users.sql
scripts/: init_db.sh  init_redis.sh  init_tools.sh  test_error_handler.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
