[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
unicode-segmentation = "1"
validator = "0.16"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8.5", features = ["std_rng"] }
tracing-actix-web = "0.7.3"
thiserror = "1"
anyhow = "1.0.70"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
claims = "0.7"
fake = "2.5"
quickcheck = "1.0"
quickcheck_macros = "1.0"
wiremock = "0.5"
serde_json = "1.0"
linkify = "0.9"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
